<resources>
    <string name="app_name">Messenger</string>

    <string name="next">Next</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="chooseImage">Choose image</string>

    <string name="back">Back</string>
    <string name="loading">Loading...</string>
    <string name="logo">Logo</string>
    <string name="signin">Sign in</string>
    <string name="changePhone">Change phone</string>

    <string name="enterPhone">Enter phone</string>
    <string name="enterOldPhone">Enter old phone</string>
    <string name="enterNewPhone">Enter new phone</string>
    <string name="enterName">Enter name</string>
    <string name="enterNick">Enter nick</string>

    <string name="loginForm">Login</string>
    <string name="loginDetails">Please enter data in this field</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalidPhone">Invalid phone</string>
    <string name="requiredField">Required field</string>
    <string name="errorOccured">Some errors occured</string>
    <string name="invalidCode">Invalid code</string>
    <string name="invalidNick">Nick must be from 4 to 32 symbols and start with latin letter</string>
    <string name="invalidName">Name must be from 4 to 32 symbols and start with latin letter</string>
    <string name="notSame">This field must be not same</string>
    <string name="newCodeSent">New code was sent</string>
    <string name="phoneChanged">Phone changed</string>
    <string name="notSet">Not set</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_chat">Create chat</string>
    <string name="menu_info">Info</string>
    <string name="create_chat">Create chat</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <string name="account">Account</string>
    <string name="phoneHelper">Tap to change phone</string>
    <string name="nickHelper">Tap to change nickname</string>
    <string name="descriptionHelper">Write some about you</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="changeNick">Change nickname</string>
    <string name="changeName">Change name</string>
    <string name="deleteAvatar">Delete avatar</string>
    <string name="enterDesc">Enter description</string>
    <string name="changeDesc">Change description</string>
    <string name="curLang">en</string>
    <string name="reload">Reload app</string>

    <string name="noDialogs">No dialogs</string>
    <string name="messagesDeleted">Messages were deleted</string>
    <string name="dialogs">Dialogs</string>
    <string name="messages">Messages</string>
    <string name="user">User</string>
    <string name="noData">No data was found</string>
    <string name="loadMore"><u>Load more</u></string>

    <string name="participants">%1$d participants</string>
    <string name="banned">You leaved or was banned</string>
    <string name="lastSeen">Last seen at %1$s</string>
    <string name="startDialog">Start dialog</string>
    <string name="actions">Actions</string>
    <string name="ban">Ban</string>
    <string name="clear">Clear</string>
    <string name="phone">Phone</string>
    <string name="nick">Nick</string>
    <string name="description">Description</string>
    <string name="unban">Unban</string>
    <string name="enterMessage">Enter message</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="resend">Resend</string>
    <string name="deleteForOther">Delete for other</string>
    <string name="selectFriends">Select friends</string>
    <string name="friendName">Friend name</string>
    <string name="unknownType">Unknown message type</string>
    <string name="permissionNotGranted">Permission not granted</string>
    <string name="errorWebsocket">Error while connecting to websocket</string>
</resources>
